[workspace]
members = [
    "crates/quickjs",
    "crates/quickjs-wasm",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
