[package]
name = "quickjs-wasm-rs"
version = "3.0.0-alpha.1"
authors = [""]
edition = "2021"
license = ""
description = "High-level bindings and serializers for a Wasm build of QuickJS"
homepage = "https://github.com/bytecodealliance/javy/tree/main/crates/quickjs-wasm-rs"
repository = "https://github.com/bytecodealliance/javy/tree/main/crates/quickjs-wasm-rs"
categories = ["api-bindings"]

[dependencies]
anyhow = { workspace = true }
quickjs-wasm-sys = { version = "1.1.2-alpha.1", path = "../quickjs-wasm-sys" }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"

[dev-dependencies]
quickcheck = "1"
serde_bytes = "0.11.14"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
