[package]
name = "quickjs"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
wasi-common = "16.0.0"
wasmtime = "16.0.0"
wasmtime-wasi = "16.0.0"

[dev-dependencies]
clap = { version = "4.4.11", features = ["derive"] }
num_cpus = "1.16.0"
rayon = "1.8.0"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
